--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.26.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-mat-select-search": "^2.2.0",
+    "ngx-owl-carousel-o": "^3.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
