--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@auth0/angular-jwt": "^5.0.1",
     "@rxweb/reactive-form-validators": "^2.0.0",
     "bootstrap": "^4.4.1",
+    "file-saver": "^2.0.2",
     "mix-scss": "^1.0.9",
-    "moment": "^2.26.0",
+    "moment": "^2.27.0",
     "ngx-bootstrap": "^5.6.1",
     "ngx-mat-select-search": "^2.2.0",
     "ngx-owl-carousel-o": "^3.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
+    "xlsx": "^0.16.6",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
