--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "bootstrap": "^4.4.1",
     "exact-math": "^2.2.3",
     "file-saver": "^2.0.2",
-    "mat-select-filter": "^2.3.7",
+    "mat-select-filter": "^2.3.9",
     "mix-scss": "^1.1.2",
     "moment": "^2.27.0",
     "ngx-bootstrap": "^5.6.1",
@@ -59,5 +59,7 @@
     "tslint": "~6.1.0",
     "typescript": "~4.1.6"
   },
-  "resolutions": {"webpack": "^5.0.0"}
+  "resolutions": {
+    "webpack": "^5.0.0"
+  }
 }
