--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,6 @@
               "src/web.config"
             ],
             "styles": [
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
-              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "src/styles.scss"
             ],
             "scripts": [],
@@ -67,20 +65,24 @@
                   "maximumError": "10kb"
                 }
               ]
-            }
+            },
+            "development": {}
           },
-          "defaultConfiguration": ""
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "frontExpoSmart:build"
           },
           "configurations": {
             "production": {
               "browserTarget": "frontExpoSmart:build:production"
+            },
+            "development": {
+              "browserTarget": "frontExpoSmart:build:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
@@ -121,14 +123,17 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "frontExpoSmart:serve"
+            "protractorConfig": "e2e/protractor.conf.js"
           },
           "configurations": {
             "production": {
               "devServerTarget": "frontExpoSmart:serve:production"
+            },
+            "development": {
+              "devServerTarget": "frontExpoSmart:serve:development"
             }
-          }
+          },
+          "defaultConfiguration": "development"
         }
       }
     }
