--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "@auth0/angular-jwt": "^5.0.1",
-    "@rxweb/reactive-form-validators": "^2.0.0",
+    "@rxweb/reactive-form-validators": "^2.1.3",
     "@swimlane/ngx-charts": "^16.0.0",
     "bootstrap": "^4.4.1",
     "exact-math": "^2.2.3",
@@ -34,6 +34,7 @@
     "ngx-bootstrap": "^5.6.1",
     "ngx-mat-select-search": "^3.3.0",
     "rxjs": "~6.5.4",
+    "sass": "^1.37.5",
     "tslib": "^2.0.0",
     "xlsx": "^0.16.6",
     "zone.js": "~0.11.4"
