--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "frontExpoSmart": {
+    "runrestro": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -76,10 +76,10 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "frontExpoSmart:build:production"
+              "browserTarget": "runrestro:build:production"
             },
             "development": {
-              "browserTarget": "frontExpoSmart:build:development"
+              "browserTarget": "runrestro:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -87,7 +87,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "frontExpoSmart:build"
+            "browserTarget": "runrestro:build"
           }
         },
         "test": {
@@ -127,10 +127,10 @@
           },
           "configurations": {
             "production": {
-              "devServerTarget": "frontExpoSmart:serve:production"
+              "devServerTarget": "runrestro:serve:production"
             },
             "development": {
-              "devServerTarget": "frontExpoSmart:serve:development"
+              "devServerTarget": "runrestro:serve:development"
             }
           },
           "defaultConfiguration": "development"
@@ -138,7 +138,7 @@
       }
     }
   },
-  "defaultProject": "frontExpoSmart",
+  "defaultProject": "runrestro",
   "cli": {
     "analytics": false
   }
