--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # dependencies
 /node_modules
 /front-expo-smart-win32-ia32
+/runrestro-win32-ia32
 
 # profiling files
 chrome-profiler-events*.json
