--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "ng e2e",
     "electron": "electron .",
     "electron-build": "ng build --base-href ./ && electron .",
-    "app:build": "electron-packager . --platform=win32 --arch=ia32 --overwrite --icon='src/assets/images/app.icns'"
+    "app:build": "ng build --base-href ./ && electron-packager . --platform=win32 --arch=ia32 --overwrite --icon='assets/images/app.icns'"
   },
   "private": true,
   "dependencies": {
