--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "e2e": "ng e2e",
     "electron": "electron .",
     "electron-build": "ng build --base-href ./ && electron .",
-    "app:build": "ng build --base-href ./ && electron-packager . --platform=win32 --arch=ia32 --overwrite --icon='assets/images/app.icns'"
+    "app:build": "ng build --base-href ./ && electron-packager . --platform=win32 --arch=ia32 --overwrite --icon='/assets/icon.ico' --ignore=^/node_modules --ignore=^/src --ignore=^/runrestro-win32-ia32 --ignore=^/e2e"
   },
   "private": true,
   "dependencies": {
@@ -48,11 +48,13 @@
     "@angular/cli": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
     "@angular/language-service": "~12.2.0",
+    "@types/electron": "^1.6.10",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "electron": "^15.1.2",
+    "electron-packager": "^15.4.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.4",
